fixed the footer
the footer no longer overlaps with other elements on the page

--- a/style.css
+++ b/style.css
@@ -106,10 +106,10 @@ html {
 }
 
 div.footer {
-   position:absolute;
+   position: absolute;
    bottom:0px;
    width:100%;
-   height: 200px;
+   height: 0px;
    background: clear;
    color: lightgray;
 
@@ -118,16 +118,16 @@ div.footer {
 
 div.footernav {
 
-padding-bottom: 10px;
+padding-bottom: 0px;
 
 
 }
 
 div.footerclose{
 
-text-align: center;
-position: absolute;
-bottom: 0px;
+text-align: left;
+
+color: black;
 
 
 
